--- a/partials/custom/navigation.hbs
+++ b/partials/custom/navigation.hbs
@@ -31,21 +31,36 @@ Ghostium uses Font Awesome you can find all icons available on the url below
   </a>
 </li>
 <li class="drawer-list-item">
+  <a href="{{@blog.url}}/projects/">
+    <i class="fa fa-terminal"></i>Projectos
+  </a>
+</li>
+<li class="drawer-list-item">
+  <a href="{{@blog.url}}/sobre-mi/">
+    <i class="fa fa-linux"></i>Sobre mi
+  </a>
+</li>
+<li class="drawer-list-item">
+  <a href="{{@blog.url}}/contacto/">
+    <i class="fa fa-envelope"></i>Contacto
+  </a>
+</li>
+<!-- <li class="drawer-list-item">
   <a href="{{@blog.url}}/rss/">
     <i class="fa fa-rss"></i>Subscribe to Feed
   </a>
-</li>
+</li> -->
 <li class="drawer-list-divider"></li>
 <li class="drawer-list-item drawer-list-title">
   Follow me
 </li>
 <li class="drawer-list-item">
-  <a href="http://twitter.com" target="_blank">
+  <a href="http://twitter.com/lemuswilfred" target="_blank">
     <i class="fa fa-twitter"></i>Twitter
   </a>
 </li>
 <li class="drawer-list-item">
-  <a href="http://github.com" target="_blank">
+  <a href="http://github.com/WALR" target="_blank">
     <i class="fa fa-github"></i>Github
   </a>
 </li>
