--- a/post.hbs
+++ b/post.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<section class="wrapper wrapper-post">
+<section class="wrapper wrapper-post" >
   <div class="wrapper-container">
     <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post {{post_class}}">
       {{#post}}
@@ -29,18 +29,30 @@
             <!--h2 itemprop="about" class="post-subtitle"></h2-->
           </header>
           <aside class="post-side">
+            <div class="FixNav" id="FixNav" style="position: relative;top: 0px;">
+
             <div class="post-author">
               {{#if author.image}}
-                <a href="{{author.website}}" class="post-author-avatar">
+                <a href="{{author.website}}" class="post-author-avatar" style="margin-left: auto;margin-right: auto;float:none;">
                   <img src="{{author.image}}" alt="{{author.name}}">
                 </a>
               {{/if}}
-              <div class="post-author-info">
+              <div class="post-author-info" style="text-align: center;">
                 <a href="{{author.website}}" class="post-author-name">
                   {{author.name}}
                 </a>
                 <p class="post-author-bio">{{author.bio}}</p>
               </div>
+              <div class="lnks" style="text-align:center;padding-top:1em;">
+                  <!-- <li class="drawer-list-item"> -->
+
+                    <a class="btn btn-primary" href="/">
+                      <i class="fa fa-angle-double-left"></i>
+                      All Posts
+                    </a>
+                  <!-- </li> -->
+              </div>
+            </div>
             </div>
           </aside>
           <div itemprop="articleBody" class="post-body">
@@ -74,13 +86,14 @@
               </div>
             </div>
             <div class="post-social">
-              <h4 class="post-footer-heading">Spread the word</h4>
+              <h4 class="post-footer-heading">Comparte con</h4>
               <a href="#" data-action="share-twitter"><i class="fa fa-fw fa-lg fa-twitter"></i></a>
               <a href="#" data-action="share-facebook"><i class="fa fa-fw fa-lg fa-facebook"></i></a>
               <a href="#" data-action="share-gplus"><i class="fa fa-fw fa-lg fa-google-plus"></i></a>
             </div>
           </footer>
         </section>
+        <div id="disqus_thread"></div>
       {{/post}}
       <section itemprop="comment" class="post-comments">
         <div id="disqus_thread"></div>
