--- a/src/assets/_scss/partials/_main.scss
+++ b/src/assets/_scss/partials/_main.scss
@@ -59,7 +59,8 @@ body {
   top: 0;
   bottom: 0;
   outline: 0;
-  background-color: $background-color;
+  background-color: #FAFAFA;
+  // background-color: $background-color;
   overflow: auto;
 
   @include breakpoint(medium) {
@@ -104,4 +105,11 @@ body {
       padding: 25px 15px;
     }
   }
+}
+
+
+.lnks{
+    // background-color: red;
+    border: solid 1px red;
+    top:1em;
 }
